--- a/public/admin main/admin.html
+++ b/public/admin main/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel Administrador - Automatix Solutions</title>
-    <link rel="stylesheet" href="admin-styles.css">
+    <link rel="stylesheet" href="adminstyles.css">
 </head>
 <body class="dark-theme" id="body">
     <!-- Header -->
@@ -372,6 +372,6 @@
         </div>
     </div>
 
-    <script src="admin-script.js"></script>
+    <script src="adminscript.js"></script>
 </body>
 </html>
