--- a/public/adminMain/admin.html
+++ b/public/adminMain/admin.html
@@ -5,13 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel Administrador - Automatix Solutions</title>
-<<<<<<< HEAD:public/adminMain/admin.html
-    <link rel="stylesheet" href="./adminStyles.css">
-=======
-    <link rel="stylesheet" href="adminstyles.css">
->>>>>>> 2b685d9d49722eba8f34e36e7e72b5cc1dd69fb9:public/admin main/admin.html
-</head>
-
+    <link rel="stylesheet" href="adminStyles.css">
+</head> 
 <body class="dark-theme" id="body">
     <!-- Header -->
     <header class="header" id="header">
@@ -385,11 +380,7 @@
         </div>
     </div>
 
-<<<<<<< HEAD:public/adminMain/admin.html
-    <script src="./adminScript.js"></script>
-=======
-    <script src="adminscript.js"></script>
->>>>>>> 2b685d9d49722eba8f34e36e7e72b5cc1dd69fb9:public/admin main/admin.html
+    <script src="adminScript.js"></script>
 </body>
 
 </html>
