agregado dashboard proto

--- a/public/mainfacturas/index.html
+++ b/public/mainfacturas/index.html
@@ -225,7 +225,7 @@
                     </div>
                 </div>
                 <div class="footer-info">
-                    <span>Powered by Gemini AI</span>
+                    <span>Powered by Automatix Solutions</span>
                     <span>•</span>
                     <span>v2.0.0</span>
                 </div>
