--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -6,7 +6,7 @@
   <title>Dashboard Administrativo - Sistema de Gestión</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
-  <link rel="stylesheet" href="dashboard-styles.css">
+  <link rel="stylesheet" href="dashboardstyles.css">
 </head>
 <body id="body" class="dark">
   <!-- Loading State -->
@@ -248,6 +248,6 @@
     </div>
   </main>
 
-  <script src="dashboard-script.js"></script>
+  <script src="dashboardscript.js"></script>
 </body>
 </html>
