arreglando estructura del proyecto y resolviendo problemas de renderizado de las rutas admin y ''

--- a/public/adminMain/admin.html
+++ b/public/adminMain/admin.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel Administrador - Automatix Solutions</title>
-    <link rel="stylesheet" href="adminStyles.css">
-</head> 
+    <link rel="stylesheet" href="/adminMain/adminStyles.css">
+</head>
+
 <body class="dark-theme" id="body">
     <!-- Header -->
     <header class="header" id="header">
@@ -380,7 +381,7 @@
         </div>
     </div>
 
-    <script src="adminScript.js"></script>
+    <script src="/adminMain/adminScript.js"></script>
 </body>
 
 </html>
