--- a/public/login/login.html
+++ b/public/login/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Automatix Solutions</title>
-    <link rel="stylesheet" href="loginstyles.css">
+    <link rel="stylesheet" href="/login/loginstyles.css">
 </head>
 
 <body class="dark-theme" id="body">
@@ -155,7 +155,7 @@
         <div class="bg-blob bg-blob-2"></div>
     </div>
 
-    <script src="loginScript.js"></script>
+    <script src="/login/loginScript.js"></script>
 </body>
 
 </html>
