--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -30,6 +30,16 @@
           <option value="365">Último año</option>
         </select>
       </div>
+
+      <!-- ===== NUEVO BOTÓN MENU ===== -->
+      <button id="btnMenu"
+              class="btn btn-secondary"
+              onclick="window.location.assign('http://localhost:8080/adminmain/admin.html'); return false;"
+              title="Ir al menú principal">
+        Menu
+      </button>
+      <!-- ===== FIN NUEVO BOTÓN MENU ===== -->
+
       <button id="refreshButton" class="btn btn-primary">
         <i id="refreshIcon" class="fas fa-sync-alt"></i>
         Actualizar
