--- a/public/DescargaFacturasGeneral/DescargarFacturas.html
+++ b/public/DescargaFacturasGeneral/DescargarFacturas.html
@@ -67,6 +67,16 @@
           <label class="vg-label">Fecha final</label>
           <input id="dateTo" type="date" class="vg-input" />
         </div>
+
+        <!-- NUEVO: Buscar por usuario -->
+        <div class="filter-item">
+          <label class="vg-label">Buscar por usuario</label>
+          <select id="userFilter" class="vg-input">
+            <option value="">Todos</option>
+          </select>
+        </div>
+        <!-- /NUEVO -->
+
         <div class="filter-item grow">
           <label class="vg-label">Buscar por ID de factura</label>
           <input id="idSearch" type="text" class="vg-input" placeholder="fac-000123..." />
