--- a/public/General/login/login.html
+++ b/public/General/login/login.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <!-- Formulario -->
-                <form action="/usuarios" method="post" id="loginForm" class="login-form">
+                <form action="/login/usuarios" method="post" id="loginForm" class="login-form">
                     <!-- Campo Usuario -->
                     <div class="form-group">
                         <label class="form-label">Usuario *</label>
@@ -155,7 +155,7 @@
         <div class="bg-blob bg-blob-2"></div>
     </div>
 
-    <script src="/login/loginScript.js"></script>
+    <!-- <script src="/login/loginScript.js"></script> -->
 </body>
 
 </html>
