--- a/public/User/mainfacturas/index.html
+++ b/public/User/mainfacturas/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automatix Facturas</title>
-    <link rel="stylesheet" href="/mainfacturas/mainStyles.css">
+    <link rel="stylesheet" href="/User/mainfacturas/mainStyles.css">
 </head>
 
 <body class="dark-theme" id="body">
@@ -239,7 +239,7 @@
         </div>
     </footer>
 
-    <script src="/mainfacturas/mainJS.js"></script>
+    <script src="/User/mainfacturas/mainJS.js"></script>
 </body>
 
 </html>
