--- a/public/User/usermain/IndexUser.html
+++ b/public/User/usermain/IndexUser.html
@@ -24,6 +24,16 @@
                 </div>
                 
                 <div class="header-controls">
+                    <!-- Botón Descargar facturas (nuevo) -->
+                    <button class="theme-toggle" id="downloadBtn" title="Descargar facturas"
+                            style="display:flex;align-items:center;gap:8px;width:auto;padding:0 12px;">
+                        <svg class="theme-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5m0 0l5-5m-5 5V4" />
+                        </svg>
+                        <span style="color: var(--text-primary);">Descargar facturas</span>
+                    </button>
+
                     <!-- Toggle de tema -->
                     <button class="theme-toggle" id="themeToggle" title="Cambiar tema">
                         <svg class="theme-icon" id="themeIcon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
