Mensaje descriptivo del commit

--- a/public/General/login/login.html
+++ b/public/General/login/login.html
@@ -155,7 +155,8 @@
         <div class="bg-blob bg-blob-2"></div>
     </div>
 
-    <!-- <script src="/login/loginScript.js"></script> -->
+    <!-- Scripts -->
+    <script src="/General/login/loginScript.js"></script>
 </body>
 
 </html>
