--- a/public/Administrador/AdminMain/admin.html
+++ b/public/Administrador/AdminMain/admin.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel Administrador - Automatix Solutions</title>
+
+    <!-- Anti-flash: fija el tema antes del primer pintado -->
+    <script>
+    !function(){
+      try{
+        var t = localStorage.getItem("automatix.theme");
+        var cls = (t === "light") ? "light-theme" : "dark-theme"; // default: dark
+        document.documentElement.classList.add(cls);
+      }catch(e){}
+    }();
+    </script>
+
     <link rel="stylesheet" href="adminStyles.css">
 </head>
 <body class="dark-theme" id="body">
@@ -67,14 +79,7 @@
                         </a>
                     </div>
 
-                    <button id="themeToggle" class="theme-toggle" title="Cambiar tema">
-                        <svg id="moonIcon" class="theme-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
-                        </svg>
-                        <svg id="sunIcon" class="theme-icon hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 0 018 0z" />
-                        </svg>
-                    </button>
+                    <!-- (Botón de modo día/noche removido a solicitud) -->
 
                     <div class="profile-container">
                         <button id="profileToggle" class="profile-btn" title="Ver perfil">
@@ -140,7 +145,7 @@
                 <div class="stat-content">
                     <div class="stat-icon purple">
                         <svg class="stat-svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 0 06 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 009.288 0M15 7a3 3 0 11-6 0 3 0 06 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
                         </svg>
                     </div>
                     <div class="stat-info">
