Mensaje descriptivo del commit

--- a/public/Administrador/AdminMain/admin.html
+++ b/public/Administrador/AdminMain/admin.html
@@ -284,7 +284,8 @@
                                 id="descripcionInput"
                                 class="form-textarea"
                                 rows="4"
-                                placeholder="Describe el propósito del viáticos..."
+                                placeholder="Describe el propósito del viáticos...maximo 200 caracteres"
+                                maxlength="200"
                                 required
                             ></textarea>
                         </div>
